More PR feedback for style guide

--- a/app/assets/stylesheets/partials/abstractions/_drop-down.scss
+++ b/app/assets/stylesheets/partials/abstractions/_drop-down.scss
@@ -4,7 +4,7 @@
 
 /*
 	A generic drop down powered by 'Angular Toggle Visibility Directive' and a version for `:hover`.
-  See the drop down menu module for the implementation.
+  See the drop down menu module for an example of how it can be used.
 
   Styleguide Drop Down
 */
