soical share aria-expanded fixes

--- a/app/views/shared/_social_share.html.erb
+++ b/app/views/shared/_social_share.html.erb
@@ -1,6 +1,6 @@
 <div class="social-share drop-down-container js-social-share" data-url="<%= tile_social_share_url(@centre, kind, id) %>" aria-live="polite" aria-atomic="true">
 
-  <button type="button" class="social-share__trigger controls__btn btn js-social-share-trigger" aria-haspopup="true">
+  <button type="button" class="social-share__trigger controls__btn btn js-social-share-trigger" aria-haspopup="true" aria-expanded="false">
     <%# Preloader %>
     <span class="preloader">
       <span class="preloader__spinner"></span>
