--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -22,7 +22,7 @@
 
         <div class="container">
 
-          <h2 class="stores-maps__filters-toggle__hdr">Stores A-Z</h2>
+          <h2 class="stores-maps__filters-toggle__hdr hide-visually">Stores A-Z</h2>
 
           <%# Filters %>
 
