--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -60,11 +60,6 @@
     width: 100%;
     @include to-rem(margin-top, 10);
 
-    /* Override default width for palm at this breakpoint */
-    @include respond-max($palm) {
-      &.drop-down-menu__target--alt-width-palm {@include to-rem(width, $drop-down-width);}
-    }
-
     /* Reduce widths at this breakpoint */
     @include respond-min($iphone-landscape) {
       /* Default version */
@@ -83,6 +78,9 @@
       border: 1px solid $color-grey-light-2;
       border-bottom-width: 2px;
     }
+
+    /* Override default width */
+    &.drop-down-menu__target--alt-width-palm {@include to-rem(width, $drop-down-width);}
 
     /* Hover version */
     .drop-down-container--hover & {@include to-rem(margin-top, -4);}
