--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -3,9 +3,9 @@
 
 <% if in_lightbox? %>
   <div class="page-overlay"></div>
-  <article role="article" class="detail-view detail-view--<%= params[:controller].singularize %> box" tabindex="-1" role="dialog" aria-labelledby="detail-view__hdr" aria-hidden="true">
+  <article role="article" class="detail-view detail-view--<%= params[:controller].singularize %>" tabindex="-1" role="dialog" aria-labelledby="detail-view__hdr" aria-hidden="true">
 <% else %>
-  <article role="article" class="detail-view detail-view--<%= params[:controller].singularize %> box">
+  <article role="article" class="detail-view detail-view--<%= params[:controller].singularize %>">
 <% end %>
 
   <% unless meta.hide_social_share %>
