Change all occurrences of Extenders in the CSS partial comments to Modifiers

--- a/app/assets/stylesheets/partials/abstractions/_divider.scss
+++ b/app/assets/stylesheets/partials/abstractions/_divider.scss
@@ -17,7 +17,7 @@
 	@extend %mrg-base;
 }
 
-/* --Extenders-- */
+/* --Modifiers-- */
 
 /* Larger spacing */
 .divider--lrg {@include to-rem(padding-bottom margin-bottom, $spacing-dbl);}
