--- a/app/assets/stylesheets/partials/abstractions/_frame.scss
+++ b/app/assets/stylesheets/partials/abstractions/_frame.scss
@@ -25,7 +25,7 @@
 	}
 }
 
-/* Extend: change to `inline-block` */
+/* Modifier: change to `inline-block` */
 .frame--inline {display: inline-block;}
 
 	/* Caption */
