--- a/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
+++ b/app/assets/stylesheets/partials/abstractions/_toggle-content.scss
@@ -19,7 +19,7 @@
 	.no-js & {display: block !important;}
 }
 
-/* --Extenders-- */
+/* --Modifiers-- */
 
 /* Center align */
 .toggle-content--btn-center {text-align: center;}
