--- a/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
+++ b/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
@@ -21,6 +21,6 @@
     text-align: center;
     vertical-align: middle;
 
-    /* Extends: Left alignment */
+    /* Modifier: Left alignment */
     .vert-align--left & {text-align: left;}
   }
