--- a/app/assets/stylesheets/partials/forms/_layout.scss
+++ b/app/assets/stylesheets/partials/forms/_layout.scss
@@ -82,9 +82,9 @@
 		}
 	}
 
-	/* --Extenders-- */
+	/* --Modifiers-- */
 
-	/* The 'Actions' and 'Solo checkbox' extenders need this to position their 'Preloader' and 'Checkbox' */
+	/* The 'Actions' and 'Solo checkbox' modifiers need this to position their 'Preloader' and 'Checkbox' */
 	.form-main__inputs--solo-checkbox,
 	.form-main__inputs--actions {position: relative;}
 
