--- a/app/assets/stylesheets/partials/modules/_fine-print.scss
+++ b/app/assets/stylesheets/partials/modules/_fine-print.scss
@@ -15,7 +15,7 @@
   font-style: italic;
 }
 
-/* Extend: centre aligns the text */
+/* Modifier: centre aligns the text */
 .fine-print--center {
   /* Need this as it's most likely we'll apply to a `small` element */
   display: block;
