--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -228,7 +228,7 @@
 /* Arrow opposites */
 .icon--arrow-opposites:before {content: "\e007";}
 
-/* --Extenders-- */
+/* --Modifiers-- */
 
 /* Apply some spacing between the icon element and adjacent text */
 .icon--spacing:before {margin-right: to-em($spacing-sixth);}
