--- a/app/assets/stylesheets/partials/modules/_list-divider.scss
+++ b/app/assets/stylesheets/partials/modules/_list-divider.scss
@@ -51,5 +51,5 @@
   }
 }
 
-/* Extend: turn off top padding for the first item */
+/* Modifier: turn off top padding for the first item */
 .list-divider--first {padding-top: 0;}
