--- a/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
+++ b/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
@@ -51,5 +51,5 @@
     p > span {color: $color-txt-dark;}
 }
 
-/* Extend: remove top padding */
+/* Modifier: remove top padding */
 .no-content-fallback-msg--flush {padding-top: 0;}
