--- a/app/assets/stylesheets/partials/modules/_preloader.scss
+++ b/app/assets/stylesheets/partials/modules/_preloader.scss
@@ -22,7 +22,7 @@
 	em {font-style: italic;}
 }
 
-/* Extend: position the loader in the centre of it's parent */
+/* Modifier: position the loader in the centre of it's parent */
 .preloader--middle {
 	position: absolute;
 	z-index: 99;
