--- a/app/assets/stylesheets/partials/modules/_sprite.scss
+++ b/app/assets/stylesheets/partials/modules/_sprite.scss
@@ -26,7 +26,7 @@
 
 /* --Set sprites-- */
 
-/* --Extenders-- */
+/* --Modifiers-- */
 
 /* Apply some spacing between the sprite element and adjacent text */
 .sprite--spacing {margin-right: to-em($spacing-sixth);}
