--- a/app/assets/stylesheets/partials/modules/_txt-formatted.scss
+++ b/app/assets/stylesheets/partials/modules/_txt-formatted.scss
@@ -7,7 +7,7 @@
 		Styles for text formatting which aren't provided by the base styles, this is usually used for user generated text e.g. product description.
 
 	Note:
-		User generated text needs the extender: `.txt-formatted--user-generated`.
+		User generated text needs the modifier: `.txt-formatted--user-generated`.
 
 	Demo:
 		Style Guide -> Modules -> Text Formatted
