--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -26,7 +26,7 @@ $hero-banner-height-lrg: 380 !default;
 	.icon--arrow-down-full:before {color: $color-txt-dark;}
 }
 
-/* --Extenders-- */
+/* --Modifiers-- */
 
 /* 'Centre home page hero banner' and 'National' */
 .header--hero,
