--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -20,7 +20,7 @@
       <%# Filters & list/map toggle button %>
       <div class="stores-maps__filters-toggle">
 
-        <div class="container">
+        <div class="container container--position">
 
           <h2 class="stores-maps__filters-toggle__hdr hide-visually">Stores A-Z</h2>
 
