--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -43,7 +43,7 @@
           <div class="storefront__details">
 
             <%# Inner container %>
-            <div class="container">
+            <div class="container container--position">
 
               <%# Store meta %>
               <dl class="storefront__details__meta">
