--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -63,11 +63,11 @@
                   <% week.each do |day| %>
                     <tr>
                       <td>
-                        <% if today?(day.date) %><em class="txt-bold"><% end %><%= format_day(day.date,0,3) %><span class="hide-fully--palm"><%= format_day(day.date,3,6) %></span><% if today?(day.date) %></em><% end %>
+                        <% if today?(day.date) %><em class="txt-bold"><% end %><%= format_day(day.date,0,3) %><span class="hide-fully--palm-inline"><%= format_day(day.date,3,6) %></span><% if today?(day.date) %></em><% end %>
                       </td>
                       <td>
                         <% if day.description.present? %>
-                          <em class="pill <%= "txt-truncate" if day.description.length > 18 %> hide-fully--palm" <%= "title=\"#{day.description}\"".html_safe if day.description.length > 18 %>><%= day.description %></em>
+                          <em class="pill <%= "txt-truncate" if day.description.length > 18 %> hide-fully--palm-inline-block" <%= "title=\"#{day.description}\"".html_safe if day.description.length > 18 %>><%= day.description %></em>
                         <% else %>
                           &nbsp;
                         <% end %>
@@ -131,7 +131,7 @@
                     <% @store_trading_hours[week_number].each do |day| %>
                       <tr>
                         <td>
-                          <% if today?(day.date) %><em class="txt-bold"><% end %><%= format_day(day.date,0,3) %><span class="hide-fully--palm"><%= format_day(day.date,3,6) %></span><% if today?(day.date) %></em><% end %>
+                          <% if today?(day.date) %><em class="txt-bold"><% end %><%= format_day(day.date,0,3) %><span class="hide-fully--palm-inline"><%= format_day(day.date,3,6) %></span><% if today?(day.date) %></em><% end %>
                         </td>
                         <td class="txt-right">
                           <% if today?(day.date) %><em class="txt-bold"><% end %>
