--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -55,7 +55,7 @@
 			<%# //Centre select tabs (palm) %>
 
 			<%# Centre select (non-palm) %>
-			<nav class="header-centre-select-national hide-fully--palm" role="navigation">
+			<nav class="header-centre-select-national hide-fully--palm-inline-block" role="navigation">
 				<h1>Choose a <span class="hide-visually">centre to see products, deals, events, and centre info:</span></h1>
 				<div class="drop-down-menu drop-down-container">
           <button class="drop-down-menu__trigger btn btn--main btn--main-dark btn--pointer btn--pointer-padding-med" toggle-visibility="header-menu-toggle-non-palm">Westfield Centre<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
