--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -1,4 +1,4 @@
-<%# Divider %>
+<%# Txt formatted and divider %>
 <div class="txt-formatted divider divider--lrg">
 
   <h2>Concierge Services</h2>
@@ -84,7 +84,7 @@
   </div>
   <%# //Westfield gift cards %>
 </div>
-<%# //Divider %>
+<%# //Txt formatted and divider %>
 
 <%= render "shared/footer_promo_tiles",
   promo_tile_1: {
