Refactor error pages and add Tealium tag to error pages

--- a/app/views/shared/_javascripts_global.html.erb
+++ b/app/views/shared/_javascripts_global.html.erb
@@ -5,4 +5,4 @@
 <%= javascript_include_tag 'application' %>
 <%# //Site wide JavaScript %>
 <%= yield :javascript %>
-<%=raw universal_tagging %>
+<%=raw third_party_universal_tagging %>
