Update class names and change to coffee script

--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -1,4 +1,4 @@
-<div class="header__overlay header-search-toggle drop-down js-header-search" id="site-search">
+<div class="header__overlay header-search-toggle drop-down js-global-search" id="site-search">
   <div class="vert-align">
     <div class="vert-align__inner">
       <div class="container" ng-controller="GlobalSearchCtrl" ng-cloak>
